# Odin

./: .env.example  .gitignore  ANALYTICS_UPGRADE_v6.md  BLOOMBERG_TERMINAL_REDESIGN_PLAN.md  DASHBOARD_FIX_COMPLETE.md  DASHBOARD_FIX_GUIDE.md  DASHBOARD_REDESIGN_PLAN.md  DASHBOARD_REORGANIZATION_PLAN.md  DEPENDENCY_GRAPH.md  Dockerfile  FEED_CONFIGURATION.md  FIXES_v5.1.md  LICENSE  OPTION_B_IMPLEMENTATION.md  PHASE_1_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_4_UPDATES.md  README.md  REORGANIZATION_COMPLETE.md  TESTING_INSTRUCTIONS.md  TICKER_AND_CHART_FIXES.md  cli_launcher.sh  docker-compose.yml  odin_cli.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  run_simple.py  start_odin.bat  test_output.html
.github/workflows/: ci.yml  deploy.yml  tests.yml
analytics/: __init__.py  advanced_analytics.py  performance_analyzer.py
backtest/: backtest_strategy.py
config/: notifications.json  settings.py
dashboard/: dashboard.py
data/: bitcoin_data.db  bitcoin_data.db-journal  cli_state.json  paper_trading.db
deploy/: docker-compose.yml  setup.sh
live_trading/: trading_bot.py
notifications/: __init__.py  discord_alerts.py  notification_manager.py  notification_system.py
odin/: __init__.py  config.py  main.py
odin/ai/: __init__.py  setup_ai.py
odin/ai/regime_detection/: __init__.py  market_states.py  regime_detector.py  regime_visualizer.py
odin/ai/strategy_selection/: __init__.py  adaptive_manager.py  ai_strategy_selector.py  strategy_scorer.py
odin/api/: __init__.py  app.py  dependencies.py  middleware.py
odin/api/routes/: __init__.py  data.py  health.py  journal.py  portfolio.py  social.py  strategies.py  trading.py  websocket.py  websockets.py
odin/api/routes/ai/: __init__.py  regime.py
odin/api/routes/market/: __init__.py  alerts.py  depth.py  fees.py  regime.py
odin/api/routes/portfolio/: __init__.py  performance.py  rebalancing.py  risk.py  status.py
odin/api/routes/strategies/: __init__.py  analysis.py  backtesting.py  comparison.py  management.py  optimization.py  signals.py
odin/api/routes/trading/: __init__.py  automation.py  execution.py  orders.py  positions.py
odin/core/: __init__.py  config.py  config_manager.py  data_collector.py  database.py  enhanced_data_collector.py  exceptions.py  models.py  portfolio_manager.py  repository.py  repository_utils.py  risk_manager.py  shutdown.py  strategy_manager.py  trading_engine.py
odin/data/: __init__.py  exchange_streams.py
odin/strategies/: __init__.py  ai_adaptive.py  base.py  bollinger_bands.py  macd.py  moving_average.py  rsi.py  swing_trader.py  swing_trading.py
odin/strategies/ai_enhanced/: __init__.py
odin/utils/: __init__.py  cache.py  console.py  http_client.py  logging.py  validators.py
paper_trading/: portfolio_manager.py
risk_management/: __init__.py  portfolio_protector.py  risk_calculator.py  risk_manager.py
scripts/: ai_diagnostic.py  bitcoin_20080225_20250525.csv  create_advanced_modules.py  csv_to_db_converter.py  deploy.py  fetch_historical_data.py  fix_database_schema.py  populate_database.py  quick_fix_data_errors.py  setup.py  setup_ai_environment.py  simple_data_setup.py  verify_bitcoin_symbols.py
scripts/data/: bitcoin_enhanced.db
src/: btc_api_server.py  btc_collector.py  btc_fetcher.py  data_manager.py  enhanced_api_server.py  paper_trading_engine.py  trading_bot.py
src/data/: paper_trading.db
strategies/: bollinger_bands.py  enhanced_strategies.py  ma_crossover.py  macd_strategy.py  rsi_strategy.py
tests/: __init__.py  conftest.py  test_ai_features.py  test_basic.py  test_models.py
tests/fixtures/: sample_data.json
tests/integration/: __init__.py  test_full_system.py  test_integration.py
tests/unit/: __init__.py  test_api.py  test_basic.py  test_data_collector.py  test_strategies.py
web/static/css/: bloomberg-terminal.css  components.css  dashboard.css  responsive.css
web/static/js/: analytics-dashboard.js  bloomberg-layout.js  charts.js  dashboard.js  indicators-patch.js  logger.js  section-manager.js  social-intelligence-v2.js  social-intelligence.js  social-intelligence.js.backup  strategies.js  technical-indicators.js  ticker-bar.js  trading-journal.js  tradingview-widget.js  websockets.js
web/templates/: dashboard-backup.html  dashboard-bloomberg.html  dashboard-v2.html  dashboard.html
web_interface/: dashboard.html  enhanced_dashboard.html
web_interface/templates/: dashboard.html
